# 73-hyperspectral-disease-trt

./: CMakeLists.txt  README.md
include/: envi_reader.h  hyperspectral_engine.h  mask_writer.h  spectral_filter.h  tensorrt_engine.h
src/: envi_reader.cpp  hyperspectral_engine.cpp  main.cpp  mask_writer.cpp  spectral_filter.cpp  tensorrt_engine.cpp
